Fix splash layout on narrow screens

--- a/src/styles/splash.styl
+++ b/src/styles/splash.styl
@@ -14,6 +14,13 @@
     width $page-width - 19rem - 2rem
     float right
 
+  @media (max-width: 800px)
+    .left, .right
+      float none
+      margin-left auto
+      margin-right auto
+      max-width 100%
+
   input
     -webkit-appearance none
     position relative
